Fixed extra space pushing out right hand side of screen

--- a/static/css/marble.css
+++ b/static/css/marble.css
@@ -605,7 +605,7 @@ h6{
 
 .node-menu-item{
     margin-left: 59px;
-    margin-right: 0px;
+    margin-right: 59px;
     color: var(--text-on-surface);
     text-decoration: none;
     cursor: pointer;
@@ -911,4 +911,12 @@ h6{
 
 .registration-status-title{
     font-weight: bold;
+}
+
+.red{
+    background-color: red;
+}
+
+.blue{
+    background-color: blue;
 }
